Closed
Bug 873253
Opened 13 years ago
Closed 13 years ago
Crash clicking on file input
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: neil, Unassigned)
Details
Attachments
(1 file)
|
827 bytes,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce problem:
1. Whitelist a domain (e.g. Bugzilla) for XUL/XBL
2. Click on a file input's Browse button (e.g. attach a patch)
Assertion failure: xpc::AllowXBLScope(js::GetContextCommpartment(cx))
| Reporter | ||
Comment 1•13 years ago
|
||
Attachment #750700 -
Flags: review?(bzbarsky)
Comment 2•13 years ago
|
||
Comment on attachment 750700 [details] [diff] [review]
Patch as written by bholley over IRC
r=me
Attachment #750700 -
Flags: review?(bzbarsky) → review+
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•