Bug 873253 Crash clicking on file input in XUL whitelisted site r=bz